open java.desktop/jdk.internal.vm in utils