@@ -48,6 +48,7 @@ dependencies {
 test {
     jvmArgs = [
         '--illegal-access=warn',
+        '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
         '--add-opens=java.base/java.io=ALL-UNNAMED',
         '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
         '--add-opens=java.desktop/java.awt=ALL-UNNAMED'
